tree-sitter-tact/grammar.js
    source_file: ($) => seq(repeat($.import), repeat($._module_item)),

    /* Imports */

    _module_item: ($) =>
      choice(
        $.primitive,
        alias($._constant, $.global_constant),
        $.native_function,
        $.asm_function,
        alias($._function, $.global_function),
        $.struct,
        $.message,
        $.contract,
        $.trait,
      ),

    /* Built-in declarations */

    _function_definition: ($) =>
      seq(
        field("attributes", optional($.function_attributes)),
        "fun",
        field("name", $.identifier),
        field("parameters", $.parameter_list),
        field("result", optional(seq(":", $._type))),
        field("body", alias($.block_statement, $.function_body)),
      ),

    parameter_list: ($) => seq("(", commaSepWithTrailing($.parameter), ")"),

    parameter: ($) =>
      seq(field("name", $.identifier), ":", field("type", $._type)),

    /* Structs, Messages */

    storage_variable: ($) =>
      seq(field("name", $.identifier), $._field_after_id),

    _field_after_id: ($) =>
      seq(
        ":",
        field("type", $._type),
        field("tlb", optional($.tlb_serialization)),
        optional(seq("=", field("value", $._expression))),
      ),

    /* Contracts, Traits */

    contract: ($) =>
      seq(
        field("attributes", optional($.contract_attributes)),
        "contract",
        field("name", $.identifier),
        field("traits", optional($.trait_list)),
        field("body", $.contract_body),
      ),

    contract_body: ($) =>
      seq(
        "{",
        repeat(
          choice(
            seq($._body_item_without_semicolon, ";"),
            $.init_function,
            $._receiver_function,
            alias($._function_definition, $.storage_function),
          ),
        ),
        optional($._body_item_without_semicolon),
        "}",
      ),

    _body_item_without_semicolon: ($) =>
      choice(
        $.storage_constant,
        $.storage_variable,
        alias($._function_declaration, $.storage_function),
      ),

    init_function: ($) =>
      seq(
        "init",
        field("parameters", $.parameter_list),
        field("body", alias($.block_statement, $.function_body)),
      ),

    _receiver_function: ($) =>
      choice($.receive_function, $.bounced_function, $.external_function),

    receive_function: ($) =>
      seq(
        "receive",
        "(",
        field("parameter", optional(choice($.string, $.parameter))),
        ")",
        field("body", alias($.block_statement, $.function_body)),
      ),

    bounced_function: ($) =>
      seq(
        "bounced",
        "(",
        field("parameter", $.parameter),
        ")",
        field("body", alias($.block_statement, $.function_body)),
      ),

    external_function: ($) =>
      seq(
        "external",
        "(",
        field("parameter", optional(choice($.string, $.parameter))),
        ")",
        field("body", alias($.block_statement, $.function_body)),
      ),

    /* Statements*/

    _type: ($) => choice($.map_type, $.bounced_type, $._simple_type),

    identifier: (_) => /[a-zA-Z_][a-zA-Z0-9_]*/,
